# save_webp

./: README.md  __init__.py  pyproject.toml  requirements.txt  save_image_extended.py  save_webp.py  save_webp_avif.py
web/js/: contextmenu.js
