#  Used by Comfy Registry https://comfyregistry.org
# updated in accordance to https://docs.comfy.org/registry/specifications

[project]
name = "save-image-extended-comfyui"
version = "2.88"
description = "Save as JXL, AVIF, WebP, JPEG, JPEG2k, customize the folder, sub-folders, and filenames of your images!"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "numpy", 
  "piexif", 
  "imagecodecs", 
  "pillow", 
  "pillow-avif-plugin", 
  "pillow-jxl-plugin", 
  "comfyui-frontend-package>=1.20.0"
]
classifiers = [
  "Operating System :: OS Independent"  # Works on all operating systems
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/audioscavenger/save-image-extended-comfyui"
Documentation = "https://github.com/audioscavenger/save-image-extended-comfyui"
"Bug Tracker" = "https://github.com/audioscavenger/save-image-extended-comfyui/issues"

[tool.comfy]
PublisherId = "audioscavenger"
DisplayName = "Save Image Extended"
Icon = "💾"
