[project]
name = "save_webp_avif"
description = "Save as WebP or AVIF in ComfyUI."
version = "1.0"
license = "AGPL3.0"
dependencies = ["piexif", "pillow", "pillow-avif-plugin"]

[project.urls]
Repository = "https://github.com/AlterMann3/save_webp_avif"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "AlterMann3"
DisplayName = "save_webp_avif"
Icon = ""
