[project]
name = "save_webp"
description = "Save as WebP in ComfyUI."
version = "1.0"
license = "AGPL3.0"
dependencies = ["piexif", "pillow"]

[project.urls]
Repository = "https://github.com/AlterMann3/save_webp"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "AlterMann3"
DisplayName = "save_webp"
Icon = ""
